--- a/screen.css
+++ b/screen.css
@@ -51,6 +51,7 @@ table {
 html {
 	font-family: Helvetica, Arial, sans-serif;
 	line-height: 1.5;
+	font-size: 1.6em;
 }
 h1 {
 	text-align: center;
@@ -58,4 +59,9 @@ h1 {
 p {
 	text-align: left;
 	text-indent: 2em;
+}
+
+/* For larger screens */
+@media screen and (min-width: 990px) {
+	html { font-size: 1.8em; }
 }
