--- a/screen.css
+++ b/screen.css
@@ -49,9 +49,14 @@ table {
 /* End Reset CSS */
 /* Begin Site Styles */
 html {
+	text-rendering: optimizeLegibility;
+	text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100;
+	-ms-text-size-adjust: 100%;
 	font-family: Helvetica, Arial, sans-serif;
-	line-height: 1.5;
-	font-size: 1.6em;
+	font-size: 1.125em; /* 18px / 16px */
+	line-height: 1.222em; /* 22px / 18px */
 }
 h1 {
 	text-align: center;
