--- a/screen.css
+++ b/screen.css
@@ -48,6 +48,9 @@ table {
 }
 /* End Reset CSS */
 /* Begin Site Styles */
+
+/* Using modular scale http://modularscale.com/?18px&1.667 */
+
 html {
 	text-rendering: optimizeLegibility;
 	text-size-adjust: 100%;
@@ -57,13 +60,22 @@ html {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 1.125em; /* 18px / 16px = 1.125*/
 	line-height: 1.222em; /* 22px / 18px = about 120%*/
+	padding-top: 2.444em; /* two lines of padding on top and bottom */
+	padding-bottom: 2.444em;
+	padding-left: 1.222em; /* one line of padding on each side */
+	padding-right: 1.222em;
 }
 h1 {
+	font-size: 2.778em; /* 50.02px / 18px =  2.778 */
+	line-height: 1.319em; /* 3 gridlines of 22px; 66px / 50.02px = 1.319 */
 	text-align: center;
 }
 p {
 	text-align: left;
 	text-indent: 2em;
+	padding-bottom: 1.222em; /* = 1 line-height */
+}
+figure {
 	padding-bottom: 1.222em; /* = 1 line-height */
 }
 
