--- a/screen.css
+++ b/screen.css
@@ -72,7 +72,7 @@ h1 {
 }
 p {
 	text-align: left;
-	text-indent: 2em;
+	/* text-indent: 2em; */ /* Don't indent if you have empty space b/w paragraphs*/
 }
 p, figure {
 	padding-bottom: 1.222em; /* = 1 line-height */
